# pikodrak-audio2text

.github/workflows/: deploy.yml
android/: .gitignore  gradle.properties  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
android/app/src/main/kotlin/cz/vytvarenicher/whisper/: AudioDecoder.kt  MainActivity.kt  WhisperLib.kt  WhisperViewModel.kt
android/app/src/main/kotlin/cz/vytvarenicher/whisper/ui/: FileTab.kt  MicTab.kt  ModelDownloadScreen.kt  TranscriptionResult.kt  WhisperApp.kt
android/app/src/main/kotlin/cz/vytvarenicher/whisper/ui/theme/: WhisperTheme.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/: libs.versions.toml
desktop/: audio2text.spec  audio2text_diarize.py  config.py  diarization.py  main.py  requirements.txt  ui.py
